maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:5: warning: enclosing method isDirectionFree has result type Unit: return value discarded
  return ! estFaceMur()
  ^Escaper:20: error: type mismatch;
 found   : Unit
 required: Int
      sommeVirage = keepHandOnSideWall(sommeVirage)
                                      ^Escaper:28: error: not enough arguments for method keepHandOnSideWall: (som: Int)Unit.
Unspecified value parameter som.
    keepHandOnSideWall()
                      ^Escaper:38: error: reassignment to val
  som = som-1
      ^Escaper:45: error: reassignment to val
      som= som+1
         ^Escaper:49: warning: enclosing method keepHandOnSideWall has result type Unit: return value discarded
  return som%4
  ^